--- a/juhe_V3.4_ext_world/CMAdSdkDemo/src/main/res/layout/admob_native_ad_layout_install.xml
+++ b/juhe_V3.4_ext_world/CMAdSdkDemo/src/main/res/layout/admob_native_ad_layout_install.xml
@@ -39,7 +39,8 @@
                     android:layout_height="wrap_content"
                     android:singleLine="true"
                     android:text="FaceBook"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:textColor="@color/Text_black"/>
 
                 <TextView
                     android:id="@+id/big_sub_title"
@@ -48,7 +49,8 @@
                     android:layout_marginTop="6dp"
                     android:singleLine="true"
                     android:text="Social App Total 23MB"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:textColor="@color/Text_black"/>
             </LinearLayout>
 
             <Button
@@ -84,7 +86,8 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="6dp"
             android:layout_marginBottom="6dp"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            android:textColor="@color/Text_black"/>
 
     </LinearLayout>
 
